tests/baselines/reference/exportImplementsNamespace1.errors.txt
tests/cases/conformance/internalModules/moduleDeclarations/exportImplementsNamespace1.ts(7,3): error TS2673: Module 'typeof M' incorrectly implements interface 'Foo'
  Types of property 'y' are incompatible.
    Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/internalModules/moduleDeclarations/exportImplementsNamespace1.ts (1 errors) ====
    interface Foo {
      x: number;
      y: string;
    }
    
    module M {
      export implements Foo;
      ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2673: Module 'typeof M' incorrectly implements interface 'Foo'
!!! error TS2673:   Types of property 'y' are incompatible.
!!! error TS2673:     Type 'number' is not assignable to type 'string'.
      export var x: number;
      export var y: number;
    }
    
    